--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -23,7 +23,8 @@
       <div class="col-6 col-lg-2 mb-3">
         <h5>Community</h5>
         <ul class="list-unstyled">
-          <li class="mb-2"><a href="https://github.com/sipt">Github</a></li>
+          <li class="mb-2"><a href="https://twitter.com/{{ .Site.Params.twitter }}">Twitter</a></li>
+          <li class="mb-2"><a href="{{ .Site.Params.github_org }}">Github</a></li>
         </ul>
       </div>
     </div>
