--- a/site/layouts/partials/home/blogs.html
+++ b/site/layouts/partials/home/blogs.html
@@ -6,7 +6,7 @@
     <h2 class="display-5 mb-3 fw-semibold lh-sm">Blogs</h2>
   </div>
   <div class="container">
-    <div class="row align-items-center gx-5 gy-3">
+    <div class="row align-items-strentch gx-5 gy-3">
       {{ range .Pages}}
         {{- $url := split .Permalink "/" -}}
         {{- $page_slug := index $url (sub (len $url) 2) -}}
